--- a/.github/workflows/get_afrr.yml
+++ b/.github/workflows/get_afrr.yml
@@ -25,14 +25,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
-
-      - name: Install dependencies
-        run: uv sync
-          
+        
       - name: Run fetcher
         env:
           TENNET_API_KEY: ${{ secrets.TENNET_API_KEY }}
-        run: python affr_data_fetcher.py
+        run: uv run affr_data_fetcher.py
           
       - name: Commit and push if changes
         run: |
