--- a/.github/workflows/get_afrr.yml
+++ b/.github/workflows/get_afrr.yml
@@ -36,4 +36,4 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update AFRR data $(date '+%Y-%m-%d %H:%M:%S')" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update AFRR data $(date in UTC '+%Y-%m-%d %H:%M:%S')" && git push)
